--- List of Tables and their Usage
-- CROP_MASTER  - Stores all crop types.
-- SEASON_MASTER  - Crop growing seasons.
-- SOIL_TYPE_MASTER
-- CROP_STAGE_MASTER - Growth stages.
-- INPUT_CATEGORY_MASTER
-- INPUT_MASTER
-- CROP_SEASON_MAPPING
-- CROP_SOIL_MAPPING
-- CROP_INPUT_RECOMMENDATION - Which input required for crop.
-- INPUT_APPLICATION_SCHEDULE



-- CROP_MASTER ----------------------
CREATE TABLE CROP_MASTER (
    CROP_ID INT PRIMARY KEY,
    CROP_NAME VARCHAR(100),
    CROP_CATEGORY VARCHAR(50),
    DURATION_DAYS INT
);

INSERT INTO CROP_MASTER VALUES (1,'Rice','Cereal',120);
INSERT INTO CROP_MASTER VALUES (2,'Wheat','Cereal',110);
INSERT INTO CROP_MASTER VALUES (3,'Maize','Cereal',100);
INSERT INTO CROP_MASTER VALUES (4,'Cotton','Fiber',180);
INSERT INTO CROP_MASTER VALUES (5,'Sugarcane','Commercial',365);
INSERT INTO CROP_MASTER VALUES (6,'Tomato','Vegetable',90);
INSERT INTO CROP_MASTER VALUES (7,'Potato','Vegetable',95);
INSERT INTO CROP_MASTER VALUES (8,'Soybean','Oilseed',100);
INSERT INTO CROP_MASTER VALUES (9,'Groundnut','Oilseed',110);
INSERT INTO CROP_MASTER VALUES (10,'Chilli','Vegetable',120);

-- SEASON_MASTER ----------------------
CREATE TABLE SEASON_MASTER (
    SEASON_ID INT PRIMARY KEY,
    SEASON_NAME VARCHAR(50)
);

INSERT INTO SEASON_MASTER VALUES (1,'Kharif');
INSERT INTO SEASON_MASTER VALUES (2,'Rabi');
INSERT INTO SEASON_MASTER VALUES (3,'Zaid');

-- SOIL_TYPE_MASTER ----------------------

CREATE TABLE SOIL_TYPE_MASTER (
    SOIL_ID INT PRIMARY KEY,
    SOIL_NAME VARCHAR(50),
    SOIL_DESCRIPTION VARCHAR(200)
);

INSERT INTO SOIL_TYPE_MASTER VALUES (1,'Black Soil','Clay soil ideal for cotton');
INSERT INTO SOIL_TYPE_MASTER VALUES (2,'Red Soil','Low nitrogen soil');
INSERT INTO SOIL_TYPE_MASTER VALUES (3,'Alluvial Soil','Highly fertile river soil');
INSERT INTO SOIL_TYPE_MASTER VALUES (4,'Laterite Soil','Acidic soil');
INSERT INTO SOIL_TYPE_MASTER VALUES (5,'Sandy Soil','Low water retention');

-- CROP_STAGE_MASTER ----------------------
CREATE TABLE CROP_STAGE_MASTER (
    STAGE_ID INT PRIMARY KEY,
    STAGE_NAME VARCHAR(50),
    STAGE_ORDER INT
);

INSERT INTO CROP_STAGE_MASTER VALUES (1,'Seed Treatment',1);
INSERT INTO CROP_STAGE_MASTER VALUES (2,'Germination',2);
INSERT INTO CROP_STAGE_MASTER VALUES (3,'Vegetative',3);
INSERT INTO CROP_STAGE_MASTER VALUES (4,'Flowering',4);
INSERT INTO CROP_STAGE_MASTER VALUES (5,'Fruit Formation',5);
INSERT INTO CROP_STAGE_MASTER VALUES (6,'Harvest',6);

-- INPUT_CATEGORY_MASTER ----------------------
CREATE TABLE INPUT_CATEGORY_MASTER (
    CATEGORY_ID INT PRIMARY KEY,
    CATEGORY_NAME VARCHAR(50)
);
INSERT INTO INPUT_CATEGORY_MASTER VALUES (1,'Seed');
INSERT INTO INPUT_CATEGORY_MASTER VALUES (2,'Fertilizer');
INSERT INTO INPUT_CATEGORY_MASTER VALUES (3,'Insecticide');
INSERT INTO INPUT_CATEGORY_MASTER VALUES (4,'Fungicide');
INSERT INTO INPUT_CATEGORY_MASTER VALUES (5,'Herbicide');
INSERT INTO INPUT_CATEGORY_MASTER VALUES (6,'Bio Fertilizer');
INSERT INTO INPUT_CATEGORY_MASTER VALUES (7,'Growth Promoter');
INSERT INTO INPUT_CATEGORY_MASTER VALUES (8,'Equipment');


-- INPUT_MASTER ----------------------
CREATE TABLE INPUT_MASTER (
    INPUT_ID INT PRIMARY KEY,
    INPUT_NAME VARCHAR(100),
    CATEGORY_ID INT,
    INPUT_TYPE VARCHAR(50),
    UNIT VARCHAR(20),
    ORGANIC_FLAG CHAR(1),
    FOREIGN KEY (CATEGORY_ID) REFERENCES INPUT_CATEGORY_MASTER(CATEGORY_ID)
);
INSERT INTO INPUT_MASTER VALUES (1,'Urea',2,'Chemical','Kg','N');
INSERT INTO INPUT_MASTER VALUES (2,'DAP',2,'Chemical','Kg','N');
INSERT INTO INPUT_MASTER VALUES (3,'MOP',2,'Chemical','Kg','N');
INSERT INTO INPUT_MASTER VALUES (4,'Zinc Sulphate',2,'Chemical','Kg','N');
INSERT INTO INPUT_MASTER VALUES (5,'Neem Oil',3,'Organic','Liter','Y');
INSERT INTO INPUT_MASTER VALUES (6,'Glyphosate',5,'Chemical','Liter','N');
INSERT INTO INPUT_MASTER VALUES (7,'Carbendazim',4,'Chemical','Liter','N');
INSERT INTO INPUT_MASTER VALUES (8,'Mancozeb',4,'Chemical','Kg','N');
INSERT INTO INPUT_MASTER VALUES (9,'Seaweed Extract',7,'Organic','Liter','Y');
INSERT INTO INPUT_MASTER VALUES (10,'Rhizobium',6,'Biological','Kg','Y');
INSERT INTO INPUT_MASTER VALUES (11,'Hybrid Rice Seed',1,'Hybrid','Kg','N');
INSERT INTO INPUT_MASTER VALUES (12,'Hybrid Tomato Seed',1,'Hybrid','Packet','N');
INSERT INTO INPUT_MASTER VALUES (13,'Cypermethrin',3,'Chemical','Liter','N');
INSERT INTO INPUT_MASTER VALUES (14,'Imidacloprid',3,'Chemical','Liter','N');
INSERT INTO INPUT_MASTER VALUES (15,'Humic Acid',7,'Organic','Liter','Y');


-- CROP_SEASON_MAPPING ----------------------
CREATE TABLE CROP_SEASON_MAPPING (
    ID INT PRIMARY KEY,
    CROP_ID INT,
    SEASON_ID INT,
    FOREIGN KEY (CROP_ID) REFERENCES CROP_MASTER(CROP_ID),
    FOREIGN KEY (SEASON_ID) REFERENCES SEASON_MASTER(SEASON_ID)
);
INSERT INTO CROP_SEASON_MAPPING VALUES (1,1,1);
INSERT INTO CROP_SEASON_MAPPING VALUES (2,2,2);
INSERT INTO CROP_SEASON_MAPPING VALUES (3,3,1);
INSERT INTO CROP_SEASON_MAPPING VALUES (4,4,1);
INSERT INTO CROP_SEASON_MAPPING VALUES (5,6,2);
INSERT INTO CROP_SEASON_MAPPING VALUES (6,7,2);
INSERT INTO CROP_SEASON_MAPPING VALUES (7,8,1);
INSERT INTO CROP_SEASON_MAPPING VALUES (8,9,1);
INSERT INTO CROP_SEASON_MAPPING VALUES (9,10,1);


-- CROP_SOIL_MAPPING ----------------------
CREATE TABLE CROP_SOIL_MAPPING (
    ID INT PRIMARY KEY,
    CROP_ID INT,
    SOIL_ID INT,
    FOREIGN KEY (CROP_ID) REFERENCES CROP_MASTER(CROP_ID),
    FOREIGN KEY (SOIL_ID) REFERENCES SOIL_TYPE_MASTER(SOIL_ID)
);
INSERT INTO CROP_SOIL_MAPPING VALUES (1,1,3);
INSERT INTO CROP_SOIL_MAPPING VALUES (2,2,3);
INSERT INTO CROP_SOIL_MAPPING VALUES (3,3,2);
INSERT INTO CROP_SOIL_MAPPING VALUES (4,4,1);
INSERT INTO CROP_SOIL_MAPPING VALUES (5,6,3);
INSERT INTO CROP_SOIL_MAPPING VALUES (6,7,5);
INSERT INTO CROP_SOIL_MAPPING VALUES (7,8,2);
INSERT INTO CROP_SOIL_MAPPING VALUES (8,9,1);
INSERT INTO CROP_SOIL_MAPPING VALUES (9,10,3);


-- CROP_INPUT_RECOMMENDATION ----------------------
CREATE TABLE CROP_INPUT_RECOMMENDATION (
    REC_ID INT PRIMARY KEY,
    CROP_ID INT,
    INPUT_ID INT,
    STAGE_ID INT,
    DOSAGE VARCHAR(50),
    APPLICATION_METHOD VARCHAR(50),
    FOREIGN KEY (CROP_ID) REFERENCES CROP_MASTER(CROP_ID),
    FOREIGN KEY (INPUT_ID) REFERENCES INPUT_MASTER(INPUT_ID),
    FOREIGN KEY (STAGE_ID) REFERENCES CROP_STAGE_MASTER(STAGE_ID)
);
INSERT INTO CROP_INPUT_RECOMMENDATION VALUES (1,1,11,1,'20 Kg/acre','Seed Treatment');
INSERT INTO CROP_INPUT_RECOMMENDATION VALUES (2,1,1,3,'50 Kg/acre','Soil Application');
INSERT INTO CROP_INPUT_RECOMMENDATION VALUES (3,1,13,3,'200 ml/acre','Foliar Spray');
INSERT INTO CROP_INPUT_RECOMMENDATION VALUES (4,6,12,1,'200 gm/acre','Seed Treatment');
INSERT INTO CROP_INPUT_RECOMMENDATION VALUES (5,6,1,3,'40 Kg/acre','Soil Application');
INSERT INTO CROP_INPUT_RECOMMENDATION VALUES (6,6,7,4,'250 ml/acre','Foliar Spray');
INSERT INTO CROP_INPUT_RECOMMENDATION VALUES (7,4,1,3,'60 Kg/acre','Soil Application');
INSERT INTO CROP_INPUT_RECOMMENDATION VALUES (8,4,13,3,'250 ml/acre','Foliar Spray');
INSERT INTO CROP_INPUT_RECOMMENDATION VALUES (9,4,5,3,'1 Liter/acre','Spray');
INSERT INTO CROP_INPUT_RECOMMENDATION VALUES (10,3,1,3,'40 Kg/acre','Soil Application');

-- INPUT_APPLICATION_SCHEDULE ----------------------
CREATE TABLE INPUT_APPLICATION_SCHEDULE (
    SCHEDULE_ID INT PRIMARY KEY,
    REC_ID INT,
    DAY_AFTER_SOWING INT,
    NOTES VARCHAR(200),
    FOREIGN KEY (REC_ID) REFERENCES CROP_INPUT_RECOMMENDATION(REC_ID)
);
INSERT INTO INPUT_APPLICATION_SCHEDULE VALUES (1,1,0,'Apply before sowing');
INSERT INTO INPUT_APPLICATION_SCHEDULE VALUES (2,2,25,'Top dressing');
INSERT INTO INPUT_APPLICATION_SCHEDULE VALUES (3,3,30,'Pest control spray');
INSERT INTO INPUT_APPLICATION_SCHEDULE VALUES (4,4,0,'Seed treatment before planting');
INSERT INTO INPUT_APPLICATION_SCHEDULE VALUES (5,5,20,'Vegetative stage fertilizer');
INSERT INTO INPUT_APPLICATION_SCHEDULE VALUES (6,6,45,'Disease control');
INSERT INTO INPUT_APPLICATION_SCHEDULE VALUES (7,7,30,'Nitrogen application');
INSERT INTO INPUT_APPLICATION_SCHEDULE VALUES (8,8,35,'Pest control spray');
INSERT INTO INPUT_APPLICATION_SCHEDULE VALUES (9,9,40,'Organic pest control');
INSERT INTO INPUT_APPLICATION_SCHEDULE VALUES (10,10,25,'Vegetative fertilizer');
-- CROP_INPUT_RECOMMENDATION ----------------------