@startuml
!define Table(name,desc) class name as "desc" << (T,#FFAAAA) >>

hide methods
hide stereotypes

'========================
' TABLE DEFINITIONS
'========================

Table(CROP_MASTER,"CROP_MASTER") {
  +CROP_ID : INT <<PK>>
  CROP_NAME : VARCHAR
  CROP_CATEGORY : VARCHAR
  DURATION_DAYS : INT
}

Table(SEASON_MASTER,"SEASON_MASTER") {
  +SEASON_ID : INT <<PK>>
  SEASON_NAME : VARCHAR
}

Table(SOIL_TYPE_MASTER,"SOIL_TYPE_MASTER") {
  +SOIL_ID : INT <<PK>>
  SOIL_NAME : VARCHAR
  SOIL_DESCRIPTION : VARCHAR
}

Table(CROP_STAGE_MASTER,"CROP_STAGE_MASTER") {
  +STAGE_ID : INT <<PK>>
  STAGE_NAME : VARCHAR
  STAGE_ORDER : INT
}

Table(INPUT_CATEGORY_MASTER,"INPUT_CATEGORY_MASTER") {
  +CATEGORY_ID : INT <<PK>>
  CATEGORY_NAME : VARCHAR
}

Table(INPUT_MASTER,"INPUT_MASTER") {
  +INPUT_ID : INT <<PK>>
  INPUT_NAME : VARCHAR
  CATEGORY_ID : INT <<FK>>
  INPUT_TYPE : VARCHAR
  UNIT : VARCHAR
  ORGANIC_FLAG : CHAR
}

Table(CROP_SEASON_MAPPING,"CROP_SEASON_MAPPING") {
  +ID : INT <<PK>>
  CROP_ID : INT <<FK>>
  SEASON_ID : INT <<FK>>
}

Table(CROP_SOIL_MAPPING,"CROP_SOIL_MAPPING") {
  +ID : INT <<PK>>
  CROP_ID : INT <<FK>>
  SOIL_ID : INT <<FK>>
}

Table(CROP_INPUT_RECOMMENDATION,"CROP_INPUT_RECOMMENDATION") {
  +REC_ID : INT <<PK>>
  CROP_ID : INT <<FK>>
  INPUT_ID : INT <<FK>>
  STAGE_ID : INT <<FK>>
  DOSAGE : VARCHAR
  APPLICATION_METHOD : VARCHAR
}

Table(INPUT_APPLICATION_SCHEDULE,"INPUT_APPLICATION_SCHEDULE") {
  +SCHEDULE_ID : INT <<PK>>
  REC_ID : INT <<FK>>
  DAY_AFTER_SOWING : INT
  NOTES : VARCHAR
}

'========================
' RELATIONSHIPS
'========================

CROP_MASTER ||--o{ CROP_SEASON_MAPPING
SEASON_MASTER ||--o{ CROP_SEASON_MAPPING

CROP_MASTER ||--o{ CROP_SOIL_MAPPING
SOIL_TYPE_MASTER ||--o{ CROP_SOIL_MAPPING

INPUT_CATEGORY_MASTER ||--o{ INPUT_MASTER

CROP_MASTER ||--o{ CROP_INPUT_RECOMMENDATION
INPUT_MASTER ||--o{ CROP_INPUT_RECOMMENDATION
CROP_STAGE_MASTER ||--o{ CROP_INPUT_RECOMMENDATION

CROP_INPUT_RECOMMENDATION ||--o{ INPUT_APPLICATION_SCHEDULE

@enduml